--- a/omni-quantum-systems/system-50-feature-flags/docker-compose.yml
+++ b/omni-quantum-systems/system-50-feature-flags/docker-compose.yml
@@ -14,7 +14,8 @@ services:
     ports:
     - 4242:4242
     environment:
-      DATABASE_URL: postgres://{{ vault://secret/data/unleash#db_user }}:{{ vault://secret/data/unleash#db_password }}@omni-unleash-postgres:5432/unleash
+      DATABASE_URL: postgres://{{ vault://secret/data/unleash#db_user }}:{{ vault://secret/data/unleash#db_password
+        }}@omni-unleash-postgres:5432/unleash
       DATABASE_SSL: 'false'
       INIT_ADMIN_API_TOKENS: '{{ vault://secret/data/unleash#admin_token }}'
       UNLEASH_URL: http://omni-unleash:4242
@@ -27,7 +28,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 5
-    mem_limit: 256m
     restart: unless-stopped
     logging:
       driver: json-file
@@ -66,7 +66,6 @@ services:
       interval: 15s
       timeout: 5s
       retries: 5
-    mem_limit: 256m
     restart: unless-stopped
     logging:
       driver: json-file
