--- a/omni-quantum-systems/system-51-error-tracking/docker-compose.yml
+++ b/omni-quantum-systems/system-51-error-tracking/docker-compose.yml
@@ -16,9 +16,11 @@ services:
     - 8010:8000
     environment:
       SECRET_KEY: '{{ vault://secret/data/glitchtip#secret_key }}'
-      DATABASE_URL: postgres://{{ vault://secret/data/glitchtip#db_user }}:{{ vault://secret/data/glitchtip#db_password }}@omni-glitchtip-postgres:5432/glitchtip
+      DATABASE_URL: postgres://{{ vault://secret/data/glitchtip#db_user }}:{{ vault://secret/data/glitchtip#db_password
+        }}@omni-glitchtip-postgres:5432/glitchtip
       REDIS_URL: redis://omni-glitchtip-redis:6379
-      EMAIL_URL: smtp://{{ vault://secret/data/smtp#username }}:{{ vault://secret/data/smtp#password }}@omni-listmonk:1025
+      EMAIL_URL: smtp://{{ vault://secret/data/smtp#username }}:{{ vault://secret/data/smtp#password
+        }}@omni-listmonk:1025
       GLITCHTIP_MAX_EVENT_LIFE_DAYS: '90'
     healthcheck:
       test:
@@ -29,7 +31,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 8
-    mem_limit: 512m
     restart: unless-stopped
     logging:
       driver: json-file
@@ -62,9 +63,11 @@ services:
     command: celery -A glitchtip worker -B -l info
     environment:
       SECRET_KEY: '{{ vault://secret/data/glitchtip#secret_key }}'
-      DATABASE_URL: postgres://{{ vault://secret/data/glitchtip#db_user }}:{{ vault://secret/data/glitchtip#db_password }}@omni-glitchtip-postgres:5432/glitchtip
+      DATABASE_URL: postgres://{{ vault://secret/data/glitchtip#db_user }}:{{ vault://secret/data/glitchtip#db_password
+        }}@omni-glitchtip-postgres:5432/glitchtip
       REDIS_URL: redis://omni-glitchtip-redis:6379
-      EMAIL_URL: smtp://{{ vault://secret/data/smtp#username }}:{{ vault://secret/data/smtp#password }}@omni-listmonk:1025
+      EMAIL_URL: smtp://{{ vault://secret/data/smtp#username }}:{{ vault://secret/data/smtp#password
+        }}@omni-listmonk:1025
       GLITCHTIP_MAX_EVENT_LIFE_DAYS: '90'
     healthcheck:
       test:
@@ -75,7 +78,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 5
-    mem_limit: 256m
     restart: unless-stopped
     logging:
       driver: json-file
@@ -112,7 +114,6 @@ services:
       timeout: 5s
       retries: 5
     restart: unless-stopped
-    mem_limit: 256m
     logging:
       driver: json-file
       options:
@@ -146,7 +147,6 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
-    mem_limit: 128m
     restart: unless-stopped
     logging:
       driver: json-file
