--- a/services/ml-tracking/docker-compose.yml
+++ b/services/ml-tracking/docker-compose.yml
@@ -16,8 +16,8 @@ services:
       MLFLOW_S3_ENDPOINT_URL: http://omni-minio:9000
       AWS_ACCESS_KEY_ID: ${MINIO_ACCESS_KEY}
       AWS_SECRET_ACCESS_KEY: ${MINIO_SECRET_KEY}
-    command: mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri ${MLFLOW_BACKEND_STORE_URI} --default-artifact-root
-      ${MLFLOW_DEFAULT_ARTIFACT_ROOT}
+    command: mlflow server --host 0.0.0.0 --port 5000 --backend-store-uri ${MLFLOW_BACKEND_STORE_URI}
+      --default-artifact-root ${MLFLOW_DEFAULT_ARTIFACT_ROOT}
     depends_on:
       mlflow-postgres:
         condition: service_healthy
@@ -30,7 +30,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 5
-    mem_limit: 512m
     restart: unless-stopped
     logging:
       driver: json-file
@@ -66,7 +65,6 @@ services:
       interval: 15s
       timeout: 5s
       retries: 5
-    mem_limit: 256m
     restart: unless-stopped
     logging:
       driver: json-file
@@ -108,7 +106,6 @@ services:
       interval: 20s
       timeout: 10s
       retries: 5
-    mem_limit: 512m
     restart: unless-stopped
     logging:
       driver: json-file
