fix(phase-0): unblock core infra and normalize env/credentials/ports

--- a/.env.example
+++ b/.env.example
@@ -13,207 +13,223 @@ REDIS_HOST=omni-redis
 REDIS_PORT=6379
 REDIS_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
 REDIS_URL=redis://:${REDIS_PASSWORD}@omni-redis:6379/0
-REDIS_DB=0
-CODE_ROOT=/workspaces/PLACE-HOLDER---OQEACS
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@omni-postgres:5432/${POSTGRES_DB}
-DOCKER_REGISTRY_URL=http://omni-registry:5000
-DOCKER_VOLUMES=/var/lib/docker/volumes
-DOMAIN=omni-quantum.local
-LOG_FORMAT=json
-LOG_LEVEL=INFO
-POSTGRES_DATABASES=financial_fortress,langfuse,litellm,woodpecker,coder,formbricks,mlflow,pact,sla_tracker,omni_orchestrator,tolgee,gitea,mattermost,n8n,authentik,superset,calcom,kong,posthog,chatwoot,glitchtip
-VERIFY_NETWORK=omni-quantum-network
 
-# ── SECURITY & IDENTITY ──
-AUTHENTIK_BOOTSTRAP_EMAIL=admin@omni-quantum.local
+# ── PLATFORM VARIABLES (auto-collected) ──
+ACME_EMAIL=CHANGEME
+AGENT_HEALTH_DATABASE_URL=CHANGEME
+ANTI_COLLECTION=CHANGEME
+ATTESTATION_HMAC_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+AUTHENTIK_BOOTSTRAP_EMAIL=CHANGEME
 AUTHENTIK_BOOTSTRAP_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
 AUTHENTIK_BOOTSTRAP_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-AUTHENTIK_EMAIL_FROM=noreply@omni-quantum.local
-AUTHENTIK_EMAIL_HOST=smtp.omni-quantum.local
+AUTHENTIK_EMAIL_FROM=CHANGEME
+AUTHENTIK_EMAIL_HOST=CHANGEME
 AUTHENTIK_EMAIL_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-AUTHENTIK_EMAIL_PORT=587
-AUTHENTIK_EMAIL_USERNAME=CHANGE_ME
-AUTHENTIK_EMAIL_USE_TLS=true
-AUTHENTIK_POSTGRESQL_DB=authentik
+AUTHENTIK_EMAIL_PORT=CHANGEME
+AUTHENTIK_EMAIL_USERNAME=CHANGEME
+AUTHENTIK_EMAIL_USE_TLS=CHANGEME
+AUTHENTIK_POSTGRESQL_DB=CHANGEME
 AUTHENTIK_POSTGRESQL_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-AUTHENTIK_POSTGRESQL_USER=authentik
+AUTHENTIK_POSTGRESQL_USER=CHANGEME
 AUTHENTIK_REDIS_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
 AUTHENTIK_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
 AUTHENTIK_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+BASE_URL=CHANGEME
+BENCHER_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+BLUESKY_APP_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+BLUESKY_HANDLE=CHANGEME
+BUILD_CACHE_DATABASE_URL=CHANGEME
+BUILD_DATE=CHANGEME
+CALCOM_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+CI_ADMIN_USER=CHANGEME
+CI_COMMIT_BRANCH=CHANGEME
+CI_COMMIT_SHA=CHANGEME
+CI_PIPELINE_CREATED=CHANGEME
+CI_PIPELINE_NUMBER=CHANGEME
+CI_REPO=CHANGEME
+CI_REPO_NAME=CHANGEME
+CODER_ADMIN_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+CODER_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+CODER_PG_CONNECTION_URL=CHANGEME
+CODE_ROOT=CHANGEME
+CODE_SCORER_URL=CHANGEME
+COMPLEXITY_THRESHOLD=CHANGEME
+COOLIFY_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+COOLIFY_URL=CHANGEME
+COST_TRACKING_DATABASE_URL=CHANGEME
+COVERAGE=CHANGEME
+COVERAGE_THRESHOLD=CHANGEME
 CROWDSEC_BOUNCER_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
 CROWDSEC_ENROLL_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+DAILY_BUDGET_USD=CHANGEME
+DECAY_INTERVAL_HOURS=CHANGEME
+DECAY_THRESHOLD=CHANGEME
+DEFAULT_BUILDER_ID=CHANGEME
+DEPENDENCY_ISSUES_THRESHOLD=CHANGEME
+DOCKER_REGISTRY_URL=CHANGEME
+DOCKER_VOLUMES=CHANGEME
+DOC_COLLECTION=CHANGEME
+DOMAIN=CHANGEME
+EMBEDDING_MODEL=CHANGEME
+ENABLE_SCHEDULER=CHANGEME
+FACEBOOK_PAGE_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+FORMBRICKS_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+FORMBRICKS_ENCRYPTION_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+FORMBRICKS_MAIL_FROM=CHANGEME
+FORMBRICKS_NEXTAUTH_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_ADMIN_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_DATA_DIR=CHANGEME
+GITEA_HOST=CHANGEME
+GITEA_OAUTH_CLIENT_ID=CHANGEME
+GITEA_OAUTH_CLIENT_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITEA_URL=CHANGEME
+GITEA_WEBHOOK_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+GITHUB_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+GI_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+GI_DB_USER=CHANGEME
+GOLDEN_TESTS_FILE=CHANGEME
+GRAFANA_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+GRAFANA_HOST=CHANGEME
+GRAFANA_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+GRAFANA_USER=CHANGEME
+HIGH_SCORE_THRESHOLD=CHANGEME
+IMAGE=CHANGEME
+INSTAGRAM_ACCESS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+KNOWLEDGE_FRESHNESS_DATABASE_URL=CHANGEME
 KONG_PG_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+LANGFUSE_DATABASE_URL=CHANGEME
+LANGFUSE_HOST=CHANGEME
+LANGFUSE_PUBLIC_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+LANGFUSE_SALT=CHANGEME
+LANGFUSE_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+LANGFUSE_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+LANGFUSE_URL=CHANGEME
+LINKEDIN_CLIENT_ID=CHANGEME
+LINKEDIN_CLIENT_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+LINT_ERRORS_THRESHOLD=CHANGEME
+LISTMONK_API_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+LISTMONK_API_USER=CHANGEME
+LITELLM_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+LITELLM_DATABASE_URL=CHANGEME
+LITELLM_MASTER_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+LITELLM_URL=CHANGEME
+LOG_FORMAT=CHANGEME
+LOG_LEVEL=CHANGEME
+LOW_SCORE_THRESHOLD=CHANGEME
+MATTERMOST_ALERTS_WEBHOOK=CHANGEME
+MATTERMOST_BOT_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+MATTERMOST_CICD_WEBHOOK=CHANGEME
+MATTERMOST_DEPLOY_WEBHOOK_URL=CHANGEME
+MATTERMOST_GI_WEBHOOK_URL=CHANGEME
+MATTERMOST_HOST=CHANGEME
+MATTERMOST_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+MATTERMOST_SECURITY_WEBHOOK=CHANGEME
+MATTERMOST_WEBHOOK=CHANGEME
+MATTERMOST_WEBHOOK_URL=CHANGEME
+MAX_CACHE_ENTRIES=CHANGEME
+MCP_SERVERS_DATABASE_URL=CHANGEME
+MINIO_ACCESS_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+MINIO_ENDPOINT=CHANGEME
+MINIO_MC_ALIAS=CHANGEME
+MINIO_ROOT_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+MINIO_ROOT_USER=CHANGEME
+MINIO_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+MINIO_URL=CHANGEME
+MLFLOW_BACKEND_STORE_URI=CHANGEME
+MLFLOW_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+MLFLOW_DEFAULT_ARTIFACT_ROOT=CHANGEME
+MODEL_ENDPOINT=CHANGEME
+MONTHLY_BUDGET_USD=CHANGEME
+N8N_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+N8N_ENCRYPTION_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+N8N_HOST=CHANGEME
+NANGO_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+NEO4J_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+NPM_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
 NVD_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+OLLAMA_MANAGER_URL=CHANGEME
+OMI_BRIDGE_URL=CHANGEME
+OMI_DEVICE_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+OMI_ENDPOINT=CHANGEME
+OMI_WEBHOOK_URL=CHANGEME
+OPA_SYNC_ENABLED=CHANGEME
+ORCHESTRATOR_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+ORCHESTRATOR_URL=CHANGEME
+PACT_BROKER_BASIC_AUTH_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+PACT_BROKER_BASIC_AUTH_USERNAME=CHANGEME
+PACT_BROKER_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+PACT_BROKER_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+PACT_BROKER_USERNAME=CHANGEME
+PGBOUNCER_DATABASE_URL=CHANGEME
+POSTGRES_DATABASES=CHANGEME
+POSTGRES_DB=CHANGEME
+POSTGRES_HOST=CHANGEME
+POSTGRES_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+POSTGRES_PORT=CHANGEME
+POSTGRES_USER=CHANGEME
+PROMETHEUS_HOST=CHANGEME
+PROMETHEUS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+PROVEN_COLLECTION=CHANGEME
+QDRANT_HOST=CHANGEME
+QDRANT_PORT=CHANGEME
+QDRANT_URL=CHANGEME
+REDDIT_CLIENT_ID=CHANGEME
+REDDIT_CLIENT_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+REDIS_DB=CHANGEME
+REDIS_HOST=CHANGEME
+REDIS_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+REDIS_PORT=CHANGEME
+REDIS_URL=CHANGEME
+REGISTRY=CHANGEME
 RESTIC_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-VAULT_ADDR=http://omni-vault:8200
-VAULT_ROLE_ID=CHANGE_ME
+RETROSPECTIVE_URL=CHANGEME
+SANDBOX_URL=CHANGEME
+SCAN_INTERVAL_HOURS=CHANGEME
+SCORING_URL=CHANGEME
+SECRET_ISSUES_THRESHOLD=CHANGE_ME_GENERATE_WITH_OPENSSL
+SECURITY_SCAN_INTERVAL_HOURS=CHANGEME
+SELF_TESTING_DATABASE_URL=CHANGEME
+SERVICE_NAME=CHANGEME
+SERVICE_NAME_ANALYSIS=CHANGEME
+SERVICE_NAME_DEPLOY=CHANGEME
+SERVICE_NAME_KNOWLEDGE=CHANGEME
+SERVICE_NAME_TEST=CHANGEME
+SERVICE_PORT=CHANGEME
+SERVICE_PORT_ANALYSIS=CHANGEME
+SERVICE_PORT_DEPLOY=CHANGEME
+SERVICE_PORT_KNOWLEDGE=CHANGEME
+SERVICE_PORT_TEST=CHANGEME
+SIMILARITY_THRESHOLD=CHANGEME
+SLA_TRACKER_DB_PASS=CHANGEME
+SOPS_AGE_RECIPIENTS=CHANGEME
+SPEC_COLLECTION=CHANGEME
+SPEC_SCORE_THRESHOLD=CHANGEME
+SUPERSET_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+TAG=CHANGEME
+TEMPORAL_ENABLED=CHANGEME
+TEMPORAL_NAMESPACE=CHANGEME
+THREADS_ACCESS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+TIKTOK_ACCESS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+TOOL_COLLECTION=CHANGEME
+TWITTER_ACCESS_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+TWITTER_ACCESS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
+TWITTER_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
+TWITTER_API_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+UPTIME_KUMA_URL=CHANGEME
+VAULT_ADDR=CHANGEME
+VAULT_ROLE_ID=CHANGEME
 VAULT_ROOT_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
 VAULT_SECRET_ID=CHANGE_ME_GENERATE_WITH_OPENSSL
 VAULT_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-VAULT_URL=http://omni-vault:8200
-AUTHENTIK_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── DEVOPS & ORCHESTRATION ──
-BENCHER_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-CI_ADMIN_USER=omni-admin
-CODER_ADMIN_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-COOLIFY_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_ADMIN_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_API_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_DATA_DIR=/data/gitea
-GITEA_HOST=omni-gitea
-GITEA_OAUTH_CLIENT_ID=CHANGE_ME
-GITEA_OAUTH_CLIENT_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_URL=http://omni-gitea:3000
-GITEA_WEBHOOK_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITHUB_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-N8N_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-N8N_ENCRYPTION_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-N8N_HOST=omni-n8n
-NANGO_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-ORCHESTRATOR_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-ORCHESTRATOR_URL=http://omni-orchestrator:9500
-PACT_BROKER_BASIC_AUTH_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-PACT_BROKER_BASIC_AUTH_USERNAME=pact_admin
-PACT_BROKER_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-WOODPECKER_DB_PASS=CHANGE_ME_GENERATE_WITH_OPENSSL
-WOODPECKER_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+VAULT_URL=CHANGEME
+VERIFY_NETWORK=CHANGEME
+VERSION=CHANGEME
 WOODPECKER_AGENT_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-WOODPECKER_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-GITEA_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-N8N_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── OBSERVABILITY & COMMUNICATION ──
-GRAFANA_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-GRAFANA_HOST=omni-grafana
-GRAFANA_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-GRAFANA_USER=admin
-LANGFUSE_HOST=omni-langfuse
-LANGFUSE_PUBLIC_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-LANGFUSE_SALT=CHANGE_ME
-LANGFUSE_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-LANGFUSE_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-LANGFUSE_URL=http://omni-langfuse:3000
-MATTERMOST_ALERTS_WEBHOOK=CHANGE_ME
-MATTERMOST_BOT_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-MATTERMOST_CICD_WEBHOOK=CHANGE_ME
-MATTERMOST_DEPLOY_WEBHOOK_URL=CHANGE_ME
-MATTERMOST_HOST=omni-mattermost
-MATTERMOST_SECURITY_WEBHOOK=CHANGE_ME
-MATTERMOST_WEBHOOK=CHANGE_ME
-MATTERMOST_WEBHOOK_URL=CHANGE_ME
-PROMETHEUS_HOST=omni-prometheus
-PROMETHEUS_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-UPTIME_KUMA_URL=http://omni-uptime-kuma:3001
-LANGFUSE_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-MATTERMOST_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── AI & DATA SERVICES ──
-DECAY_INTERVAL_HOURS=24
-DECAY_THRESHOLD=0.80
-EMBEDDING_MODEL=bge-small-en-v1.5
-LITELLM_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-LITELLM_MASTER_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-LITELLM_URL=http://omni-litellm:4000
-MAX_CACHE_ENTRIES=10000
-MODEL_ENDPOINT=http://omni-ollama:11434
-NEO4J_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-OLLAMA_MANAGER_URL=http://omni-model-manager:11435
-OMI_BRIDGE_URL=http://omni-omi-bridge:9700
-OMI_DEVICE_TOKEN=CHANGE_ME_GENERATE_WITH_OPENSSL
-OMI_ENDPOINT=http://omni-omi-bridge:9700
-OMI_WEBHOOK_URL=http://omni-omi-bridge:9700/webhook
-QDRANT_HOST=omni-qdrant
-QDRANT_PORT=6333
-QDRANT_URL=http://omni-qdrant:6333
-LITELLM_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── PLATFORM APPLICATIONS ──
-ANTI_COLLECTION=anti_patterns
-DOC_COLLECTION=documentation
-FORMBRICKS_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-FORMBRICKS_ENCRYPTION_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-FORMBRICKS_MAIL_FROM=noreply@omni-quantum.local
-FORMBRICKS_NEXTAUTH_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
-MINIO_ACCESS_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-MINIO_ENDPOINT=omni-minio:9000
-MINIO_MC_ALIAS=omni-minio
-MINIO_ROOT_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-MINIO_ROOT_USER=omniadmin
-MINIO_SECRET_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-MINIO_URL=http://omni-minio:9000
-MLFLOW_BACKEND_STORE_URI=postgresql://mlflow:${MLFLOW_DB_PASSWORD}@omni-postgres:5432/mlflow
-MLFLOW_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-MLFLOW_DEFAULT_ARTIFACT_ROOT=s3://omni-mlflow
-PROVEN_COLLECTION=provenance
-SPEC_COLLECTION=specs
-TOOL_COLLECTION=tools
-FORMBRICKS_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-MLFLOW_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── QUALITY, POLICY & BUDGETS ──
-COMPLEXITY_THRESHOLD=20
-COVERAGE_THRESHOLD=80
-DAILY_BUDGET_USD=50
-DEPENDENCY_ISSUES_THRESHOLD=0
-ENABLE_SCHEDULER=true
-GOLDEN_TESTS_FILE=tests/golden-tests.json
-HIGH_SCORE_THRESHOLD=90
-LINT_ERRORS_THRESHOLD=0
-LOW_SCORE_THRESHOLD=60
-MONTHLY_BUDGET_USD=1000
-SECRET_ISSUES_THRESHOLD=0
-SIMILARITY_THRESHOLD=0.85
-SLA_TRACKER_DB_PASS=CHANGE_ME_GENERATE_WITH_OPENSSL
-SPEC_SCORE_THRESHOLD=85
-
-# ── DATABASE USER PASSWORDS ──
-FINANCIAL_FORTRESS_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-CODER_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-PACT_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-SLA_TRACKER_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-OMNI_ORCHESTRATOR_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-TOLGEE_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-SUPERSET_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-CALCOM_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-KONG_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-POSTHOG_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-CHATWOOT_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-GLITCHTIP_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-
-# ── MISC ──
-ACME_EMAIL=admin@omni-quantum.local
-CODE_SCORER_URL=http://omni-code-scorer:8080
-GI_DB_USER=omni
-GI_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
-MATTERMOST_GI_WEBHOOK_URL=http://omni-mattermost:8065/hooks/omni-generation-intelligence
-
-# Marketing and Social Integrations
-LISTMONK_API_USER=admin
-LISTMONK_API_PASSWORD=CHANGE_ME
-TWITTER_API_KEY=CHANGE_ME
-TWITTER_API_SECRET=CHANGE_ME
-TWITTER_ACCESS_TOKEN=CHANGE_ME
-TWITTER_ACCESS_SECRET=CHANGE_ME
-LINKEDIN_CLIENT_ID=CHANGE_ME
-LINKEDIN_CLIENT_SECRET=CHANGE_ME
-INSTAGRAM_ACCESS_TOKEN=CHANGE_ME
-YOUTUBE_API_KEY=CHANGE_ME
-TIKTOK_ACCESS_TOKEN=CHANGE_ME
-FACEBOOK_PAGE_TOKEN=CHANGE_ME
-REDDIT_CLIENT_ID=CHANGE_ME
-REDDIT_CLIENT_SECRET=CHANGE_ME
-THREADS_ACCESS_TOKEN=CHANGE_ME
-BLUESKY_HANDLE=CHANGE_ME
-BLUESKY_APP_PASSWORD=CHANGE_ME
-
-# Missing Core Systems (Temporal, OTel, OPA, Attestation)
-TEMPORAL_NAMESPACE=default
-TEMPORAL_ENABLED=true
-OTEL_EXPORTER_OTLP_ENDPOINT=http://omni-otel-collector:4318
-OTEL_COLLECTOR_URL=http://omni-otel-collector:13133
-OPA_URL=http://omni-opa:8181
-OPA_SYNC_ENABLED=true
-ATTESTATION_HMAC_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
-DEFAULT_BUILDER_ID=omni.build-fabric/v1
+WOODPECKER_DB_PASS=CHANGEME
+WOODPECKER_DB_PASSWORD=CHANGE_ME_GENERATE_WITH_OPENSSL
+WOODPECKER_GITEA_CLIENT=CHANGEME
+WOODPECKER_GITEA_SECRET=CHANGE_ME_GENERATE_WITH_OPENSSL
+YOUTUBE_API_KEY=CHANGE_ME_GENERATE_WITH_OPENSSL
