--- a/services/build-cache/docker-compose.yml
+++ b/services/build-cache/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
     - 4226:4226
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://fortress:quantum_elite_2024@omni-postgres:5432/financial_fortress}
+      DATABASE_URL: ${BUILD_CACHE_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
       MATTERMOST_WEBHOOK_URL: ${MATTERMOST_WEBHOOK_URL:-http://omni-mattermost:8065/hooks/incoming}
@@ -22,16 +22,16 @@ services:
     logging:
       driver: json-file
       options:
-        max-size: 10m
-        max-file: '3'
+        max-size: 50m
+        max-file: '5'
     healthcheck:
       test:
       - CMD-SHELL
       - curl -f http://localhost:4226/health || wget -qO- http://localhost:4226/health >/dev/null || nc -z localhost 4226
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 60s
+      retries: 5
+      start_period: 30s
     deploy:
       resources:
         limits:
