--- a/services/cost-tracking/docker-compose.yml
+++ b/services/cost-tracking/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
     - 9622:9622
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://fortress:quantum_elite_2024@omni-postgres:5432/financial_fortress}
+      DATABASE_URL: ${COST_TRACKING_DATABASE_URL}
       LANGFUSE_URL: ${LANGFUSE_URL:-http://omni-langfuse:3000}
       MINIO_URL: ${MINIO_URL:-http://omni-minio:9000}
       PORT: '9622'
@@ -20,16 +20,16 @@ services:
     logging:
       driver: json-file
       options:
-        max-size: 10m
-        max-file: '3'
+        max-size: 50m
+        max-file: '5'
     healthcheck:
       test:
       - CMD-SHELL
       - curl -f http://localhost:9622/health || wget -qO- http://localhost:9622/health >/dev/null || nc -z localhost 9622
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 60s
+      retries: 5
+      start_period: 30s
     deploy:
       resources:
         limits:
