--- a/services/flow-builder/docker-compose.yml
+++ b/services/flow-builder/docker-compose.yml
@@ -17,13 +17,18 @@ services:
       - flowise-data:/root/.flowise
       - ./flows:/app/flows
     ports:
-      - "3020:3000"
+      - "3700:3000"
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost:3000/api/v1/ping >/dev/null || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 60s
+      retries: 5
+      start_period: 30s
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: "5"
     deploy:
       resources:
         limits:
