--- a/services/mcp-schema/docker-compose.yml
+++ b/services/mcp-schema/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     - POSTGRES_HOST=${POSTGRES_HOST:-omni-postgres}
     - POSTGRES_PORT=${POSTGRES_PORT:-5432}
     - POSTGRES_USER=${POSTGRES_USER:-postgres}
-    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     - POSTGRES_DB=${POSTGRES_DB:-postgres}
     networks:
     - omni-quantum-network
@@ -21,14 +21,14 @@ services:
       - -fs
       - http://localhost:8329/ready
       interval: 30s
-      timeout: 5s
-      retries: 3
-      start_period: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
     logging:
       driver: json-file
       options:
-        max-size: 10m
-        max-file: '3'
+        max-size: 50m
+        max-file: '5'
     restart: unless-stopped
     labels:
       omni.quantum.component: mcp-schema
