--- a/services/redis/docker-compose.yml
+++ b/services/redis/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       test: ["CMD-SHELL", "redis-cli -a \"$${REDIS_PASSWORD}\" ping | grep -q PONG"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
       start_period: 30s
     deploy:
       resources:
@@ -35,6 +35,11 @@ services:
       omni.quantum.component: redis
       omni.quantum.tier: foundation
       omni.quantum.critical: "true"
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: "5"
     networks:
       - omni-quantum-network
 
