--- a/services/system-44-mcp-servers/docker-compose.yml
+++ b/services/system-44-mcp-servers/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     environment:
       SERVICE_NAME: ${SERVICE_NAME_ANALYSIS:-mcp-analysis}
       SERVICE_PORT: ${SERVICE_PORT_ANALYSIS:-8335}
-      DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://omni:omni@omni-postgres:5432/omni_mcp_servers}
+      DATABASE_URL: ${MCP_SERVERS_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379/12}
       QDRANT_URL: ${QDRANT_URL:-http://omni-qdrant:6333}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
@@ -37,7 +37,7 @@ services:
         - "import urllib.request; urllib.request.urlopen('http://localhost:8335/health')"
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
       start_period: 30s
     deploy:
       resources:
@@ -46,6 +46,11 @@ services:
           memory: 1G
         reservations:
           memory: 128M
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: '5'
     labels:
       omni.quantum.system: "44"
       omni.quantum.component: mcp-analysis
@@ -82,7 +87,7 @@ services:
     environment:
       SERVICE_NAME: ${SERVICE_NAME_TEST:-mcp-test}
       SERVICE_PORT: ${SERVICE_PORT_TEST:-8336}
-      DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://omni:omni@omni-postgres:5432/omni_mcp_servers}
+      DATABASE_URL: ${MCP_SERVERS_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379/12}
       QDRANT_URL: ${QDRANT_URL:-http://omni-qdrant:6333}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
@@ -97,7 +102,7 @@ services:
         - "import urllib.request; urllib.request.urlopen('http://localhost:8336/health')"
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
       start_period: 30s
     deploy:
       resources:
@@ -106,6 +111,11 @@ services:
           memory: 1G
         reservations:
           memory: 128M
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: '5'
     labels:
       omni.quantum.system: "44"
       omni.quantum.component: mcp-test
@@ -142,7 +152,7 @@ services:
     environment:
       SERVICE_NAME: ${SERVICE_NAME_DEPLOY:-mcp-deploy}
       SERVICE_PORT: ${SERVICE_PORT_DEPLOY:-8337}
-      DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://omni:omni@omni-postgres:5432/omni_mcp_servers}
+      DATABASE_URL: ${MCP_SERVERS_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379/12}
       QDRANT_URL: ${QDRANT_URL:-http://omni-qdrant:6333}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
@@ -158,7 +168,7 @@ services:
         - "import urllib.request; urllib.request.urlopen('http://localhost:8337/health')"
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
       start_period: 30s
     deploy:
       resources:
@@ -167,6 +177,11 @@ services:
           memory: 1G
         reservations:
           memory: 128M
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: '5'
     labels:
       omni.quantum.system: "44"
       omni.quantum.component: mcp-deploy
@@ -203,7 +218,7 @@ services:
     environment:
       SERVICE_NAME: ${SERVICE_NAME_KNOWLEDGE:-mcp-knowledge}
       SERVICE_PORT: ${SERVICE_PORT_KNOWLEDGE:-8338}
-      DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://omni:omni@omni-postgres:5432/omni_mcp_servers}
+      DATABASE_URL: ${MCP_SERVERS_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379/12}
       QDRANT_URL: ${QDRANT_URL:-http://omni-qdrant:6333}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
@@ -218,7 +233,7 @@ services:
         - "import urllib.request; urllib.request.urlopen('http://localhost:8338/health')"
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
       start_period: 30s
     deploy:
       resources:
@@ -227,6 +242,11 @@ services:
           memory: 1G
         reservations:
           memory: 128M
+    logging:
+      driver: json-file
+      options:
+        max-size: 50m
+        max-file: '5'
     labels:
       omni.quantum.system: "44"
       omni.quantum.component: mcp-knowledge
