--- a/services/system-45-knowledge-freshness/docker-compose.yml
+++ b/services/system-45-knowledge-freshness/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       SERVICE_NAME: knowledge-freshness
       SERVICE_PORT: "8330"
-      DATABASE_URL: ${DATABASE_URL:-postgresql+asyncpg://omni:omni@omni-postgres:5432/omni_freshness}
+      DATABASE_URL: ${KNOWLEDGE_FRESHNESS_DATABASE_URL}
       REDIS_URL: ${REDIS_URL:-redis://omni-redis:6379/10}
       QDRANT_URL: ${QDRANT_URL:-http://omni-qdrant:6333}
       LITELLM_URL: ${LITELLM_URL:-http://omni-litellm:4000}
@@ -39,18 +39,18 @@ services:
         - "import urllib.request; urllib.request.urlopen('http://localhost:8330/health')"
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 20s
+      retries: 5
+      start_period: 30s
     restart: unless-stopped
     labels:
-      omni.quantum.component: "45"
+      omni.quantum.component: "knowledge-freshness"
       omni.quantum.service: "knowledge-freshness"
-      omni.quantum.tier: "critical"
+      omni.quantum.tier: "foundation"
       omni.quantum.port: "8330"
     logging:
       driver: json-file
       options:
-        max-size: 10m
+        max-size: 50m
         max-file: '5'
     security_opt:
       - no-new-privileges:true
