--- a/services/cross-learning/docker-compose.yml
+++ b/services/cross-learning/docker-compose.yml
@@ -22,14 +22,15 @@ services:
       - -q
       - http://localhost:8334/health
       interval: 30s
-      timeout: 5s
-      retries: 3
-    restart: on-failure
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    restart: unless-stopped
     logging:
       driver: json-file
       options:
-        max-size: 10m
-        max-file: '3'
+        max-size: 50m
+        max-file: '5'
     labels:
       omni.quantum.component: cross-learning
       omni.quantum.tier: development
