fix(phase-2): consolidate files, normalize channels, and rewrite boot scripts

--- a/services/build-forge/templates/rust-pipeline.yml
+++ b/services/build-forge/templates/rust-pipeline.yml
@@ -662,7 +662,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "deployments",
+            "channel": "omni-deployments",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -799,7 +799,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -855,7 +855,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
