--- a/services/build-forge/templates/go-pipeline.yml
+++ b/services/build-forge/templates/go-pipeline.yml
@@ -631,7 +631,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "deployments",
+            "channel": "omni-deployments",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -767,7 +767,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -822,7 +822,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
