--- a/services/build-forge/templates/python-fastapi-pipeline.yml
+++ b/services/build-forge/templates/python-fastapi-pipeline.yml
@@ -635,7 +635,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "deployments",
+            "channel": "omni-deployments",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -772,7 +772,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
@@ -828,7 +828,7 @@ steps:
         author = os.environ.get("CI_COMMIT_AUTHOR", "unknown")
 
         payload = {
-            "channel": "builds",
+            "channel": "omni-builds",
             "username": "cicdbot",
             "icon_url": "https://woodpecker-ci.org/img/logo.svg",
             "text": (
