--- a/services/data-validation-framework/requirements.txt
+++ b/services/data-validation-framework/requirements.txt
@@ -3,4 +3,5 @@ uvicorn[standard]==0.34.0
 prometheus-client==0.21.1
 httpx==0.28.1
 pytest==8.3.4
-pandera==0.22.1\ngreat-expectations==1.3.10
+pandera==0.22.1
+great-expectations==1.3.10
