--- a/services/mcp-servers/requirements.txt
+++ b/services/mcp-servers/requirements.txt
@@ -1,8 +1,8 @@
-fastapi
-uvicorn[standard]
-httpx
-pydantic
-structlog
-prometheus-client
-sse-starlette
-tenacity
+fastapi==0.128.7
+uvicorn[standard]==0.34.0
+httpx==0.28.1
+pydantic==2.10.4
+structlog==24.4.0
+prometheus-client==0.21.1
+sse-starlette==2.1.3
+tenacity==9.0.0
